--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 /runs
 /__pycache__
+encoder.pt
+main.bat
+ultralytics/engine/__pycache__/model.cpython-38.pyc
+ultralytics/engine/__pycache__/trainer.cpython-38.pyc
+ultralytics/models/yolo/__pycache__/model.cpython-38.pyc
+ultralytics/models/yolo/detect/__pycache__/train.cpython-38.pyc
+ultralytics/models/yolo/detect/__pycache__/val.cpython-38.pyc
+ultralytics/nn/__pycache__/tasks.cpython-38.pyc
+ultralytics/nn/modules/__pycache__/__init__.cpython-38.pyc
+ultralytics/nn/modules/__pycache__/block.cpython-38.pyc
+ultralytics/nn/modules/__pycache__/conv.cpython-38.pyc
+ultralytics/nn/modules/attentions/__pycache__/__init__.cpython-38.pyc
+ultralytics/nn/modules/attentions/__pycache__/cbam.cpython-38.pyc
+ultralytics/nn/modules/attentions/__pycache__/ema.cpython-38.pyc
+ultralytics/utils/__pycache__/metrics.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/clearml.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/comet.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/dvc.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/mlflow.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/neptune.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/raytune.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/tensorboard.cpython-38.pyc
+ultralytics/utils/callbacks/__pycache__/wb.cpython-38.pyc
