--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ ultralytics/utils/callbacks/__pycache__/neptune.cpython-38.pyc
 ultralytics/utils/callbacks/__pycache__/raytune.cpython-38.pyc
 ultralytics/utils/callbacks/__pycache__/tensorboard.cpython-38.pyc
 ultralytics/utils/callbacks/__pycache__/wb.cpython-38.pyc
+encoder_coco.pt
